# mixed-precision-iterative-refinement

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  profile_job.slurm  profiling_guide.md  report_kernels_43348918.ncu-rep  report_kernels_43363793.ncu-rep  report_kernels_43364994.ncu-rep  run_benchmark.slurm  run_phase1.slurm  run_phase2.slurm
docs/: GETTING_STARTED.md  IBEX_GUIDE.md  PHASE1_INSTRUCTIONS.md  PROJECT_WALKTHROUGH.md  THEORY.md
include/: matrix_utils.h  solver.h
results/: plot_results.py
src/: CMakeLists.txt  main.cu  precision_benchmark.cu
src/solvers/: baseline_solver.cu  mixed_precision_solver.cu  tensor_core_solver.cu
src/utils/: matrix_utils.cpp
